--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,10 +1,8 @@
-agents:
-  queue: "something"
 
 steps:
   - command: "echo 'I am here'"
   - label: "Yada"
     command: "echo 'Yada'"
     agents:
-      queue: "other"
+      queue: "default"
 
